@@ -1,6 +1,6 @@
 AUX 50identica-mode-gentoo.el 100 RMD160 b4de408333cf78931289d0e6a95b7eee3ddeac9e SHA1 7f54258ecbea070c6013491dbe3c710f11416866 SHA256 95bb6e6827436f72a3f3f46072584c49983104a49b9718f2232d14d31b7ccee1
 AUX identica-mode-1.0-texi-nodes.patch 873 RMD160 c78fc35d5a523122cfd32c99ab9869058c5dcb86 SHA1 5b10a3978cb1941ac1de82cd522e5a914981f3cb SHA256 407a3173ee99a4d3e27f4aa99d2cfe0b71e2033b0081c74a22fbaea442c108e2
 DIST identica-mode-1.0.tar.gz 31505 RMD160 b320388b2a288ae0ad970c20acd520a16b802ed8 SHA1 cb1384d172239f504554640d15b9b569688ea541 SHA256 4121eb6361c8dc61a9191b96007c7fae568b4562911da0ed7ce4055a3f93792e
-EBUILD identica-mode-1.0.ebuild 632 RMD160 6fda67afe53fa996e87da7d03e16d3b1c52f0ba1 SHA1 8cc48fa0fd0487871937b2b5d637711bbbdf9042 SHA256 1c729c5356d52b3eed2f3a471e19442bc9cf48f84c91a305b918527eaca29a43
-MISC ChangeLog 492 RMD160 3d9b732aa7ef75438b4f8697110a946d6067e30c SHA1 3ec31b2648ce454de33ad36228f6f1ae4bb9a327 SHA256 aa6c552539fa71acbac6176dd52f8ec525c222511462a5478f48cbf1cc5dec7c
+EBUILD identica-mode-1.0.ebuild 865 RMD160 a828304b4a3475611ed4a706a8d4fe901cd74f72 SHA1 61c8cdaabdf52fadfd474f637a04eee106a42093 SHA256 b4ae167328fec7eb875dbbbc05dc0f57eb7e2f4f11f96741068e29bcd283075f
+MISC ChangeLog 624 RMD160 0076a7d8d2d9f0eb5fdee44f2aac4a317e314c21 SHA1 2bd7a43c153fa6cf1fa4c8562d10ad36fa2e4ac6 SHA256 e5791c01d467f3461ed7bb90ce47a218992764c914870b6d1b8f12e265b60c98
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
