@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2010; Ulrich Mueller <ulm@gentoo.org> identica-mode-1.0.ebuild:
+  Package needs Emacs 23. Output message in pkg_postinst.
+
   07 Oct 2010; Ulrich Mueller <ulm@gentoo.org> identica-mode-1.0.ebuild:
   Move distfile to my dev space.
 
